// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schema Parser Double value Enum 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "DataTypeDefinition",
      "loc": Object {
        "end": 21,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [],
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 15,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 15,
              "start": 13,
            },
            "value": "WO",
          },
        },
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [],
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 21,
            "start": 18,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 18,
            },
            "value": "RLD",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 21,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple data object 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "DataTypeDefinition",
      "loc": Object {
        "end": 43,
        "start": 5,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 15,
          "start": 10,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 37,
                "start": 24,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 29,
                  "start": 24,
                },
                "value": "world",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 37,
                  "start": 31,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 37,
                    "start": 31,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 43,
            "start": 16,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 15,
              "start": 10,
            },
            "value": "Hello",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 43,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple field with arg 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 38,
                "start": 25,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 29,
                  "start": 25,
                },
                "value": "flag",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 38,
                  "start": 31,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 38,
                    "start": 31,
                  },
                  "value": "Boolean",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 47,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 47,
              "start": 41,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 47,
                "start": 41,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 49,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 49,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple field with arg with default value 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [
            Object {
              "defaultValue": Object {
                "kind": "BooleanValue",
                "loc": Object {
                  "end": 45,
                  "start": 41,
                },
                "value": true,
              },
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 45,
                "start": 25,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 29,
                  "start": 25,
                },
                "value": "flag",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 38,
                  "start": 31,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 38,
                    "start": 31,
                  },
                  "value": "Boolean",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 54,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 54,
              "start": 48,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 54,
                "start": 48,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 56,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 56,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple field with list arg 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 41,
                "start": 25,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 31,
                  "start": 25,
                },
                "value": "things",
              },
              "type": Object {
                "kind": "ListType",
                "loc": Object {
                  "end": 41,
                  "start": 33,
                },
                "type": Object {
                  "kind": "NamedType",
                  "loc": Object {
                    "end": 40,
                    "start": 34,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 40,
                      "start": 34,
                    },
                    "value": "String",
                  },
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 50,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 50,
              "start": 44,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 50,
                "start": 44,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 52,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 52,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple field with two args 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 40,
                "start": 25,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 31,
                  "start": 25,
                },
                "value": "argOne",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 40,
                  "start": 33,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 40,
                    "start": 33,
                  },
                  "value": "Boolean",
                },
              },
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 53,
                "start": 42,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 48,
                  "start": 42,
                },
                "value": "argTwo",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 53,
                  "start": 50,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 53,
                    "start": 50,
                  },
                  "value": "Int",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 62,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 62,
              "start": 56,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 62,
                "start": 56,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 64,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 64,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple non-null resolver 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 33,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 33,
              "start": 26,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 32,
                "start": 26,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 32,
                  "start": 26,
                },
                "value": "String",
              },
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 35,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 35,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple resolver 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 32,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 32,
              "start": 26,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 32,
                "start": 26,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 34,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 34,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple resolver 2`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "ResolverTypeDefinition",
      "loc": Object {
        "end": 22,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
      "types": Array [
        Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 22,
            "start": 17,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 22,
              "start": 17,
            },
            "value": "World",
          },
        },
      ],
      "variants": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 22,
    "start": 0,
  },
}
`;

exports[`Schema Parser Single value Enum 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "DataTypeDefinition",
      "loc": Object {
        "end": 18,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [],
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 18,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 18,
              "start": 13,
            },
            "value": "WORLD",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 18,
    "start": 0,
  },
}
`;

exports[`Schema Parser Union with two resolvers 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "ResolverTypeDefinition",
      "loc": Object {
        "end": 25,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
      "types": Array [
        Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 19,
            "start": 17,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 19,
              "start": 17,
            },
            "value": "Wo",
          },
        },
        Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 25,
            "start": 22,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 25,
              "start": 22,
            },
            "value": "Rld",
          },
        },
      ],
      "variants": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 25,
    "start": 0,
  },
}
`;

exports[`Schema Parser Union with two resolvers and leading pipe 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "ResolverTypeDefinition",
      "loc": Object {
        "end": 27,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 14,
          "start": 9,
        },
        "value": "Hello",
      },
      "types": Array [
        Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 21,
            "start": 19,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 19,
            },
            "value": "Wo",
          },
        },
        Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 27,
            "start": 24,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 27,
              "start": 24,
            },
            "value": "Rld",
          },
        },
      ],
      "variants": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 27,
    "start": 0,
  },
}
`;

exports[`Schema Parser parses resolver with description multi-line string 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": Object {
        "block": true,
        "kind": "StringValue",
        "loc": Object {
          "end": 19,
          "start": 0,
        },
        "value": "Description",
      },
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 86,
            "start": 73,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 78,
              "start": 73,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 86,
              "start": 80,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 86,
                "start": 80,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 88,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 68,
          "start": 63,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 88,
    "start": 0,
  },
}
`;

exports[`Schema Parser parses resolver with description string 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": Object {
        "block": false,
        "kind": "StringValue",
        "loc": Object {
          "end": 13,
          "start": 0,
        },
        "value": "Description",
      },
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 46,
            "start": 33,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 38,
              "start": 33,
            },
            "value": "world",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 46,
              "start": 40,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 46,
                "start": 40,
              },
              "value": "String",
            },
          },
        },
      ],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 48,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 28,
          "start": 23,
        },
        "value": "Hello",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 48,
    "start": 0,
  },
}
`;
